bioconductor-0209/products-in/kunpeng1/install/magick.install-out.txt
##############################################################################
##############################################################################
###
### Running command:
###
###   /home/biocbuild/bbs-3.17-bioc/R/bin/Rscript -e "source('/home/biocbuild/BBS/utils/installNonTargetPkg.R');installNonTargetPkg('magick')"
###
##############################################################################
##############################################################################


trying URL 'https://cran.rstudio.com/src/contrib/magick_2.7.3.tar.gz'
Content type 'application/x-gzip' length 4813163 bytes (4.6 MB)
==================================================
downloaded 4.6 MB

* installing *source* package ‘magick’ ...
** package ‘magick’ successfully unpacked and MD5 sums checked
** using staged installation
Package Magick++ was not found in the pkg-config search path.
Perhaps you should add the directory containing `Magick++.pc'
to the PKG_CONFIG_PATH environment variable
No package 'Magick++' found
Warning: found GraphicsMagick++ instead of ImageMagick++. GraphicsMagick is not supported.
Using PKG_CFLAGS=
Using PKG_LIBS=-lMagick++-6.Q16
** libs
using C++ compiler: ‘g++ (Ubuntu 11.3.0-1ubuntu1~22.04) 11.3.0’
using C++11
g++ -std=gnu++11 -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I/usr/local/include   -fvisibility=hidden -fPIC  -g -O2  -Wall -c RcppExports.cpp -o RcppExports.o
In file included from RcppExports.cpp:4:
magick_types.h:36:9: error: ‘Point’ in namespace ‘Magick’ does not name a type
   36 | Magick::Point Point(const char * str);
      |         ^~~~~
magick_types.h:44:22: error: ‘FilterType’ in namespace ‘Magick’ does not name a type; did you mean ‘FilterTypes’?
   44 | #define myFilterType FilterType
      |                      ^~~~~~~~~~
magick_types.h:44:22: note: in definition of macro ‘myFilterType’
   44 | #define myFilterType FilterType
      |                      ^~~~~~~~~~
make: *** [/home/biocbuild/bbs-3.17-bioc/R/etc/Makeconf:198: RcppExports.o] Error 1
ERROR: compilation failed for package ‘magick’
* removing ‘/home/biocbuild/bbs-3.17-bioc/R/library/magick’

The downloaded source packages are in
	‘/tmp/RtmppBeLaf/downloaded_packages’
Updating HTML index of packages in '.Library'
Making 'packages.html' ... done
Warning message:
In install.packages(pkg, repos = .NON_TARGET_REPOS, dependencies = FALSE,  :
  installation of package ‘magick’ had non-zero exit status
